@@ -9,6 +9,9 @@ this release.
 
 {{{ Bug Fixes
 
+- Fixed IO error when changing VFS Browser filter content
+  (#3502820 - Matthieu Casanova)
+
  - Fixed favorites menu actions (#3512250 Matthieu Casanova)
 
  - Remove jar cache when unloading a plugin (#3514022 - Matthieu Casanova)
